# tauri-sqlcipher-yubikey-poc

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml
src/: App.tsx  AppProvider.tsx  RouterTree.tsx  bindings.ts  main.tsx  style.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240713082651_init.sql
src-tauri/src/: db.rs  main.rs  models.rs  protector.rs  state.rs  yubi.rs
src/pages/DbPage/: DbPage.tsx  style.scss
src/pages/SplashPage/: SplashPage.tsx  style.scss
src/pages/SplashPage/components/SelectYubikey/: SelectYubikey.tsx
src/shared/: store.tsx  types.ts
