[package]
name = "complete-poc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = {version = "1.0"}
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
rand = "0.8"
dotenvy = {version = "0.15"}
sqlx = {version = "=0.7.4", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
libsqlite3-sys = {version = "=0.27.0", features = ["bundled-sqlcipher"] }
tokio = {version = "1.38", features = ["full"] }
anyhow = {version = "1.0"}
yubikey = { version = "0.8.0", features = ["untested"] }
rsa = "0.9.6"
strum = {version = "0.26", features = ["derive"] }
strum_macros = "0.26"
passwords = "3.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
